WIP: game result model and stardew_hold game type